# HamsaNomads

./: .env.example  .gitignore  README.md  check_setup.bat  download_ffmpeg.bat  install_windows.bat  pyproject.toml  requirements-whisper.txt  requirements.txt  run_bot.bat  run_hamsa.bat  run_telegram_bot.bat
brand/: hamsa_nomads_brand.json
examples/recipes/: paris_game_quest.json  retreat_luxury_house_tour.json  wrong_vs_right_chamour.json
recipes/: hamsa_clean_tip.json  paris_chamour_game.json  passport_stamp_travel_tip.json  retreat_luxury_house_tour.json  wrong_vs_right_chamour.json
remotion/: package.json  render.mjs  tsconfig.json
remotion/scripts/: render.mjs
remotion/src/: HamsaNomadsVideo.tsx  HamsaVideo.tsx  Root.tsx  brand.ts  index.tsx  recipe.ts  types.ts
remotion/src/components/: BrandLogo.tsx  CaptionDialogueBox.tsx  EndCard.tsx  IntroCard.tsx  PassportStampOverlay.tsx  QuestBanner.tsx  RouteLine.tsx  WrongVsRightOverlay.tsx
src/hamsa_caption_engine/: __init__.py  autocut.py  cli.py  content_analysis.py  diagnostics.py  director.py  edit_decision.py  ffmpeg_renderer.py  keyframes.py  paths.py  preprocess.py  recipe_builder.py  recipe_schema.py  remotion_renderer.py  scene_detect.py  telegram_bot.py  transcription.py  visual_ai.py
styles/: README.md
