[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hamsa-caption-engine"
version = "0.1.0"
description = "Windows-friendly local vertical video caption engine using Python, FFmpeg, and local Whisper transcription."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "faster-whisper>=1.0.0",
]

[project.scripts]
hamsa-caption = "hamsa_caption_engine.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
