[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hamsa-caption-engine"
version = "0.2.0"
description = "Windows-friendly local Telegram video editing bot with FFmpeg, optional Whisper, prompt recipes, and optional Remotion."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "python-telegram-bot>=21.0,<22",
]
keywords = ["ffmpeg", "captions", "whisper", "telegram", "remotion", "video"]

[project.optional-dependencies]
director = [
  "scenedetect[opencv]>=0.6.4,<1",
]
visual = [
  "transformers>=4.45,<5",
  "pillow>=10,<12",
]
whisper = [
  "faster-whisper>=1.1.1,<2",
  "ctranslate2>=4,<5",
]

[project.scripts]
hamsa-caption = "hamsa_caption_engine.cli:main"
hamsa-telegram-bot = "hamsa_caption_engine.telegram_bot:main"

[tool.setuptools.packages.find]
where = ["src"]
